Changelog
=========

1.3 - unreleased
----------------
* don't overwrite existing file permissions when setting execute permission.
  [fredj]

1.2 - August 7, 2009
--------------------

- Initialise the python logging module. Based on a patch from Philip Kershaw,
  which was based on a discussion on pylons-discuss:
  http://groups.google.com/group/pylons-discuss/browse_thread/thread/9b9add4529b3779c?pli=1
  [wichert]


1.1 - April 20, 2009
--------------------

* Add an 'extra-paths' option, similar the the zc.recipe.egg one.
  [chrism]


1.0 - October 16, 2008
----------------------

* No changes.
  [wichert]



1.0rc1 - June 30, 2008
----------------------

* Update the generated wrapper to test if a path is already in sys.path
  before adding it. This prevents paths being duplicated in sys.path
  when mod_wsgi reloads the module.
  [wichert]



1.0b3 - June 23, 2008
---------------------

* Do not make the recipe a subclass of zc.recipe.egg.Eggs but
  use a local instance to determine the working set.
  [wichert]

* Format the sys.path changes in the wrapper to make it more
  human readable. This is purely cosmetic to help with debugging.
  [wichert]

* Also recreate the wsgi wrapper file when updating a buildout part.
  This is needed to get get changes to versions in the working set
  (such as different version pins) reflected in the wrapper.
  [wichert]



1.0b2 - June 13, 2008
---------------------

* Call the Eggs constructor as well: working_set() needs too many of the
  internal variables it sets for us to set them ourselves. This fixes
  the recipe breaking when using find-links in buildout.
  [wichert]



1.0b1 - June 13, 2008
---------------------

* Initial release
  [wichert]
