@@ -3,7 +3,13 @@ Changelog
 
 1.3 - unreleased
 ----------------
-* don't overwrite existing file permissions when setting execute permission.
+
+- Gracefully handle .ini files that do not contain logging configuration.
+  [wichert]
+
+- don't overwrite existing file permissions when setting execute permission.
+  This fixes `issue 1
+  <https://github.com/wichert/collective.recipe.modwsgi/pull/1>`_
   [fredj]
 
 1.2 - August 7, 2009
